--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ a {
   height: auto !important;
 }
 
+.fancybox__carousel{
+  height: auto !important;
+}
+
 img {
   width: 100%;
   height: 100%;
